--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+h6 {
+  font-size: 1.4rem;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  h1 {
+   margin-bottom: 30px;
   }
-  to {
-    transform: rotate(360deg);
+ 
+  .columnsWrapper {
+    min-height: 40vh;
+    width: 100%;
+    margin: 60px 0px;
   }
-}
+  
+  .card-title {
+    margin-bottom: 15px;
+    min-height: 48px;
+  }
+  
+  .card-subtitle {
+    margin-bottom: 15px;
+    min-height: 76px;
+  }
+  
+  .cardlist {
+    margin-left: -10px;
+  }
+  
+  .card .card-body {
+    min-height: 293px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  
+  .btn {
+    margin: 0 auto;
+  }
+  
+  .chartsContainer {
+    background-color: #282c34;
+    text-align: center;
+    color: #ffffff;
+    min-height: 660px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
+  
+  .close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+  }
